--- a/style.css
+++ b/style.css
@@ -3,3 +3,10 @@ div{
     margin: 10px;
     padding: 10px;
 }
+h1{
+    background-color: cornflowerblue;
+    text-align: center;
+    color: black;
+    font-size: 100px;
+    font-style: italic;
+}
