--- a/style.css
+++ b/style.css
@@ -10,3 +10,11 @@ h1{
     font-size: 100px;
     font-style: italic;
 }
+button{
+    color: red;
+    font-size:20px;
+}
+#sub{
+    font-size: 20px;
+    color:blue;
+}
